--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   peer:
     build: .
-    image: systemtest
+    image: dissy
     stdin_open: true
     network_mode: host
     command: /bin/sh -c "chmod +x ./entrypoint.sh; ./entrypoint.sh"
